# Waggle

./: CMakeLists.txt  README.md
include/bbo2header/: bbo2header.h
include/bbz_utils/: bbz_utils.h
include/bo2bbo/: bo2bbo.h
src/: CMakeLists.txt  main.cpp
src/bbo2header/: CMakeLists.txt  bbo2header.cpp
src/bbz_utils/: CMakeLists.txt  bbz_utils.cpp
src/bo2bbo/: CMakeLists.txt  bo2bbo.cpp
testing_build/: test.bbo  test.bdb  test.bo  test.bzz  test.h
